--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,7 +8,7 @@
 html {
   font-size: 62.5%; }
 
-.main {
+.todo {
   width: 100vw;
   height: 100vh;
   background-image: url("../assets/images/bg-desktop-light.jpg");
