--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans");
 *,
 *::after,
 *::before {
@@ -6,11 +7,138 @@
   box-sizing: border-box; }
 
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  font-family: 'Josefin Sans'; }
 
 .todo {
+  font-family: 'Josefin Sans';
   width: 100vw;
   height: 100vh;
   background-image: url("../assets/images/bg-desktop-light.jpg");
   background-size: contain;
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  background-color: #eee; }
+  .todo .todo-container {
+    width: 40vw;
+    height: 80vh; }
+    .todo .todo-container .todo-header {
+      display: flex;
+      justify-content: space-between;
+      padding-bottom: 50px; }
+      .todo .todo-container .todo-header .todo-header__text {
+        font-size: 36px;
+        text-transform: uppercase;
+        font-weight: 900;
+        color: #eee;
+        letter-spacing: 10px; }
+      .todo .todo-container .todo-header .theme-switch-button {
+        background-color: transparent;
+        outline: none;
+        border: none; }
+        .todo .todo-container .todo-header .theme-switch-button > i {
+          font-size: 36px;
+          color: #eee; }
+    .todo .todo-container .todo__input {
+      display: flex;
+      align-items: center;
+      height: 50px;
+      border-radius: 5px;
+      background-color: #fff;
+      margin-bottom: 25px;
+      padding: 16px 24px; }
+      .todo .todo-container .todo__input .todo-checkbox {
+        width: 50px; }
+      .todo .todo-container .todo__input-element {
+        height: 100%;
+        flex: 1;
+        border: none;
+        outline: none;
+        background-color: transparent;
+        color: #707A89;
+        font-size: inherit; }
+
+.custom-checkbox {
+  display: block;
+  position: relative;
+  height: 25px;
+  padding-left: 35px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+
+/* Hide the browser's default checkbox */
+.custom-checkbox input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0; }
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  border: 1px solid #eee;
+  border-radius: 50%; }
+
+/* On mouse-over, add a grey background color */
+/* When the checkbox is checked, add a blue background */
+.custom-checkbox input:checked ~ .checkmark {
+  background-image: linear-gradient(to right bottom, #57ddff, #c058f3); }
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none; }
+
+/* Show the checkmark when checked */
+.custom-checkbox input:checked ~ .checkmark:after {
+  display: block; }
+
+/* Style the checkmark/indicator */
+.custom-checkbox .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid #fff;
+  border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg); }
+
+.todo-list {
+  font-family: inherit; }
+  .todo-list .todo-list__item {
+    display: flex;
+    align-items: center;
+    background-color: #fff;
+    padding: 16px 24px; }
+    .todo-list .todo-list__item:first-child {
+      border-top-left-radius: 10px;
+      border-top-right-radius: 10px; }
+    .todo-list .todo-list__item:not(:last-child) {
+      border-bottom: 1px solid #D7DDE4; }
+    .todo-list .todo-list__item .todo-list__item__name {
+      color: #707A89;
+      flex: 1; }
+    .todo-list .todo-list__item .todo-list__item__name--striked {
+      color: #B1BECB;
+      text-decoration: line-through; }
+    .todo-list .todo-list__item .todo-list__item__delete {
+      color: #B1BECB; }
+      .todo-list .todo-list__item .todo-list__item__delete:hover {
+        cursor: pointer;
+        color: #707A89; }
