--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -5,5 +5,7 @@
 @import "typography/fonts";
 
 @import "components/todo";
+@import "components/todo-action-row";
 @import "components/todo-checkbox";
 @import "components/todo-list";
+@import "components/todo-list-row";
