--- a/src/scss/base/colors.scss
+++ b/src/scss/base/colors.scss
@@ -5,4 +5,5 @@ $color-gray-1: #707A89;
 $color-gray-2: #B1BECB;
 $color-gray-3: #D7DDE4;
 
+$bright-blue: hsl(220, 98%, 61%);
 $bg-checkbox: linear-gradient(to right bottom, hsl(192, 100%, 67%), hsl(280, 87%, 65%));
