added dark theme and implemented custom hooks

--- a/src/scss/base/colors.scss
+++ b/src/scss/base/colors.scss
@@ -1,9 +1,32 @@
-$color-white-1: #fff;
-$color-white-2: #eee;
-$color-white-3: #ccc;
-$color-gray-1: #707A89;
-$color-gray-2: #B1BECB;
-$color-gray-3: #D7DDE4;
+$color-bright-blue: hsl(220, 98%, 61%);
+$color-checkbox: linear-gradient(to right bottom, hsl(192, 100%, 67%), hsl(280, 87%, 65%));
 
-$bright-blue: hsl(220, 98%, 61%);
-$bg-checkbox: linear-gradient(to right bottom, hsl(192, 100%, 67%), hsl(280, 87%, 65%));
+
+// Light Theme
+$color-light-bg: hsl(0, 0%, 98%);
+
+$color-light-gray-1: hsl(0, 0%, 98%);
+$color-light-gray-2: hsl(236, 33%, 92%);
+$color-light-gray-3: hsl(233, 11%, 84%);
+$color-light-gray-4: hsl(236, 9%, 61%);
+$color-light-gray-5: hsl(235, 19%, 35%);
+
+// Dark Theme
+$color-dark-bg: hsl(235, 21%, 11%);
+
+$color-dark-gray-1: hsl(235, 21%, 11%);
+$color-dark-gray-2: hsl(235, 24%, 19%);
+$color-dark-gray-3: hsl(237, 14%, 26%);
+$color-dark-gray-4: hsl(233, 14%, 35%);
+$color-dark-gray-5: hsl(234, 11%, 52%);
+$color-dark-gray-6: hsl(234, 39%, 85%);
+$color-dark-gray-7: hsl(236, 33%, 92%);
+
+
+// - Very Dark Blue: hsl(235, 21%, 11%)
+// - Very Dark Desaturated Blue: hsl(235, 24%, 19%)
+// - Light Grayish Blue: hsl(234, 39%, 85%)
+// - Light Grayish Blue (hover): hsl(236, 33%, 92%)
+// - Dark Grayish Blue: hsl(234, 11%, 52%)
+// - Very Dark Grayish Blue: hsl(233, 14%, 35%)
+// - Very Dark Grayish Blue: hsl(237, 14%, 26%)
