--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -4,8 +4,10 @@
 
 @import "typography/fonts";
 
+@import "themes/dark-theme";
 @import "components/todo";
 @import "components/todo-action-row";
 @import "components/todo-checkbox";
 @import "components/todo-list";
 @import "components/todo-list-row";
+
