--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans");
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap");
 *,
 *::after,
 *::before {
@@ -9,6 +9,35 @@
 html {
   font-size: 62.5%;
   font-family: 'Josefin Sans'; }
+
+.todo.todo--dark {
+  background-image: url("../assets/images/bg-desktop-dark.jpg");
+  background-color: #161722; }
+  .todo.todo--dark .todo-container .todo-header .theme-switch-button {
+    background: url("../assets/svg/icon-sun.svg") no-repeat; }
+  .todo.todo--dark .todo-container .todo__input {
+    background-color: #25273c !important; }
+    .todo.todo--dark .todo-container .todo__input .todo__input-element {
+      color: #777a92 !important; }
+  .todo.todo--dark .todo-container .todo-list .todo-list__row {
+    background-color: #25273c;
+    box-shadow: none; }
+    .todo.todo--dark .todo-container .todo-list .todo-list__row:not(:last-child) {
+      border-bottom: 1.5px solid #393a4c; }
+    .todo.todo--dark .todo-container .todo-list .todo-list__row:last-child {
+      box-shadow: none; }
+    .todo.todo--dark .todo-container .todo-list .todo-list__row .todo-list__item__name {
+      color: #cacde8; }
+    .todo.todo--dark .todo-container .todo-list .todo-list__row .todo-list__item__name--striked {
+      color: #4d5066; }
+    .todo.todo--dark .todo-container .todo-list .todo-list__row .todo-action-row .todo-left-count, .todo.todo--dark .todo-container .todo-list .todo-list__row .todo-action-row .todo-clear-completed {
+      color: #4d5066; }
+    .todo.todo--dark .todo-container .todo-list .todo-list__row .todo-action-row button {
+      color: #4d5066; }
+      .todo.todo--dark .todo-container .todo-list .todo-list__row .todo-action-row button.active {
+        color: #3a7bfd; }
+  .todo.todo--dark .todo-container .custom-checkbox .checkmark {
+    border: 1.5px solid #393a4c; }
 
 .todo {
   font-family: 'Josefin Sans';
@@ -22,7 +51,7 @@ html {
   justify-content: center;
   align-items: center;
   font-size: 18px;
-  background-color: #eee; }
+  background-color: #fafafa; }
   .todo .todo-container {
     width: 40vw;
     height: 80vh; }
@@ -34,21 +63,24 @@ html {
         font-size: 36px;
         text-transform: uppercase;
         font-weight: 900;
-        color: #eee;
+        color: #fafafa;
         letter-spacing: 10px; }
       .todo .todo-container .todo-header .theme-switch-button {
-        background-color: transparent;
+        background: url("../assets/svg/icon-moon.svg") no-repeat;
+        width: 30px;
+        height: 30px;
         outline: none;
-        border: none; }
+        border: none;
+        cursor: pointer; }
         .todo .todo-container .todo-header .theme-switch-button > i {
           font-size: 36px;
-          color: #eee; }
+          color: #fafafa; }
     .todo .todo-container .todo__input {
       display: flex;
       align-items: center;
-      height: 50px;
+      height: 65px;
       border-radius: 5px;
-      background-color: #fff;
+      background-color: #fafafa;
       margin-bottom: 25px;
       padding: 16px 24px; }
       .todo .todo-container .todo__input .todo-checkbox {
@@ -59,7 +91,7 @@ html {
         border: none;
         outline: none;
         background-color: transparent;
-        color: #707A89;
+        color: #484b6a;
         font-size: inherit; }
 
 .todo-action-row {
@@ -67,31 +99,35 @@ html {
   justify-content: space-between;
   align-items: center;
   font-size: 14px;
-  color: #B1BECB;
   font-family: inherit; }
+  .todo-action-row .todo-left-count, .todo-action-row .todo-clear-completed {
+    color: #9394a5; }
   .todo-action-row .todo-toggle {
     display: flex; }
     .todo-action-row .todo-toggle button:not(:last-child) {
       margin-right: 8px; }
   .todo-action-row button {
-    color: #B1BECB;
+    color: #9394a5;
     font-size: 14px;
     font-family: inherit;
     padding: 4px;
     background-color: transparent;
     border: none;
-    font-weight: bold;
+    font-weight: 700;
     cursor: pointer; }
     .todo-action-row button.active, .todo-action-row button.active:hover {
       color: #3a7bfd; }
     .todo-action-row button:hover {
-      color: #707A89; }
+      color: #484b6a; }
+  .todo-action-row .todo-clear-completed {
+    font-weight: 400; }
 
 .custom-checkbox {
   display: block;
   position: relative;
   height: 25px;
   padding-left: 35px;
+  margin-right: 12px;
   cursor: pointer;
   font-size: 22px;
   -webkit-user-select: none;
@@ -114,7 +150,7 @@ html {
   left: 0;
   height: 25px;
   width: 25px;
-  border: 1px solid #eee;
+  border: 1.5px solid #e4e5f1;
   border-radius: 50%; }
 
 /* On mouse-over, add a grey background color */
@@ -138,7 +174,7 @@ html {
   top: 5px;
   width: 5px;
   height: 10px;
-  border: solid #fff;
+  border: solid #fafafa;
   border-width: 0 2px 2px 0;
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
@@ -150,28 +186,31 @@ html {
     display: flex;
     align-items: center; }
     .todo-list .todo-list__item .todo-list__item__name {
-      color: #707A89;
+      color: #484b6a;
       flex: 1; }
     .todo-list .todo-list__item .todo-list__item__name--striked {
-      color: #B1BECB;
+      color: #d2d3db;
       text-decoration: line-through; }
     .todo-list .todo-list__item .todo-list__item__delete {
-      color: #B1BECB;
-      background-color: transparent;
-      border: none; }
+      background: url("../assets/svg/icon-cross.svg") no-repeat;
+      border: none;
+      width: 20px;
+      height: 20px; }
       .todo-list .todo-list__item .todo-list__item__delete:hover {
         cursor: pointer;
-        color: #707A89; }
+        color: #9394a5; }
 
 .todo-list__row {
-  background-color: #fff;
-  padding: 16px 24px; }
+  background-color: #fafafa;
+  padding: 18px 24px;
+  box-shadow: 1px 0 5px #e4e5f1; }
   .todo-list__row:first-child {
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px; }
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px; }
   .todo-list__row:last-child {
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    padding: 12px 24px; }
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    padding: 16px 24px;
+    box-shadow: 1px 2px 10px #e4e5f1; }
   .todo-list__row:not(:last-child) {
-    border-bottom: 1px solid #D7DDE4; }
+    border-bottom: 1.5px solid #e4e5f1; }
