--- a/src/scss/components/_todo-list.scss
+++ b/src/scss/components/_todo-list.scss
@@ -1,27 +1,29 @@
 .todo-list {
   font-family: inherit;
+
   .todo-list__item {
     display: flex;
     align-items: center;
     
     .todo-list__item__name {
-      color: $color-gray-1;
+      color: $color-light-gray-5;
       flex: 1;
     }
 
     .todo-list__item__name--striked {
-      color: $color-gray-2;
+      color: $color-light-gray-3;
       text-decoration: line-through;
     }
 
     .todo-list__item__delete {
-      color: $color-gray-2;
-      background-color: transparent;
+      background: url("../assets/svg/icon-cross.svg") no-repeat;
       border: none;
+      width: 20px;
+      height: 20px;
 
       &:hover {
         cursor: pointer;
-        color: $color-gray-1;
+        color: $color-light-gray-4;
       }
     }
   }
