--- a/src/scss/components/_todo-list.scss
+++ b/src/scss/components/_todo-list.scss
@@ -1,5 +1,13 @@
 .todo-list {
   font-family: inherit;
+  overflow-y: auto;
+  border-radius: 10px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 
   .todo-list__item {
     display: flex;
