--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,7 +6,7 @@
 
 @import "themes/dark-theme";
 @import "components/todo";
-@import "components/todo-action-row";
+@import "components/todo-footer";
 @import "components/todo-checkbox";
 @import "components/todo-list";
 @import "components/todo-list-row";
