--- a/src/css/style.css
+++ b/src/css/style.css
@@ -36,6 +36,9 @@ html {
       color: #4d5066; }
       .todo.todo--dark .todo-container .todo-list .todo-list__row .todo-action-row button.active {
         color: #3a7bfd; }
+  .todo.todo--dark .todo-container .todo-footer {
+    background-color: #25273c;
+    border-top: 1.5px solid #393a4c; }
   .todo.todo--dark .todo-container .custom-checkbox .checkmark {
     border: 1.5px solid #393a4c; }
 
@@ -54,7 +57,10 @@ html {
   background-color: #fafafa; }
   .todo .todo-container {
     width: 40vw;
-    height: 80vh; }
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden; }
     .todo .todo-container .todo-header {
       display: flex;
       justify-content: space-between;
@@ -94,19 +100,24 @@ html {
         color: #484b6a;
         font-size: inherit; }
 
-.todo-action-row {
+.todo-footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
   font-size: 14px;
-  font-family: inherit; }
-  .todo-action-row .todo-left-count, .todo-action-row .todo-clear-completed {
+  font-family: inherit;
+  padding: 18px 24px;
+  border-top: 1.5px solid #e4e5f1;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  background-color: #fff; }
+  .todo-footer .todo-left-count, .todo-footer .todo-clear-completed {
     color: #9394a5; }
-  .todo-action-row .todo-toggle {
+  .todo-footer .todo-toggle {
     display: flex; }
-    .todo-action-row .todo-toggle button:not(:last-child) {
+    .todo-footer .todo-toggle button:not(:last-child) {
       margin-right: 8px; }
-  .todo-action-row button {
+  .todo-footer button {
     color: #9394a5;
     font-size: 14px;
     font-family: inherit;
@@ -115,11 +126,11 @@ html {
     border: none;
     font-weight: 700;
     cursor: pointer; }
-    .todo-action-row button.active, .todo-action-row button.active:hover {
+    .todo-footer button.active, .todo-footer button.active:hover {
       color: #3a7bfd; }
-    .todo-action-row button:hover {
+    .todo-footer button:hover {
       color: #484b6a; }
-  .todo-action-row .todo-clear-completed {
+  .todo-footer .todo-clear-completed {
     font-weight: 400; }
 
 .custom-checkbox {
@@ -180,7 +191,13 @@ html {
   transform: rotate(45deg); }
 
 .todo-list {
-  font-family: inherit; }
+  font-family: inherit;
+  overflow-y: auto;
+  border-radius: 10px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0; }
+  .todo-list::-webkit-scrollbar {
+    display: none; }
   .todo-list .todo-list__item {
     display: flex;
     align-items: center; }
@@ -200,16 +217,10 @@ html {
         color: #9394a5; }
 
 .todo-list__row {
-  background-color: #fafafa;
-  padding: 18px 24px;
-  box-shadow: 1px 0 5px #e4e5f1; }
+  background-color: #fff;
+  padding: 18px 24px; }
   .todo-list__row:first-child {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px; }
-  .todo-list__row:last-child {
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    padding: 16px 24px;
-    box-shadow: 1px 2px 10px #e4e5f1; }
   .todo-list__row:not(:last-child) {
     border-bottom: 1.5px solid #e4e5f1; }
