--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,26 +19,29 @@ html {
     background-color: #25273c !important; }
     .todo.todo--dark .todo-container .todo__input .todo__input-element {
       color: #777a92 !important; }
-  .todo.todo--dark .todo-container .todo-list .todo-list__row {
-    background-color: #25273c;
-    box-shadow: none; }
-    .todo.todo--dark .todo-container .todo-list .todo-list__row:not(:last-child) {
-      border-bottom: 1.5px solid #393a4c; }
-    .todo.todo--dark .todo-container .todo-list .todo-list__row:last-child {
+  .todo.todo--dark .todo-container .todo-list {
+    box-shadow: 0 2px 10px #161722; }
+    .todo.todo--dark .todo-container .todo-list .todo-list__row {
+      background-color: #25273c;
       box-shadow: none; }
-    .todo.todo--dark .todo-container .todo-list .todo-list__row .todo-list__item__name {
-      color: #cacde8; }
-    .todo.todo--dark .todo-container .todo-list .todo-list__row .todo-list__item__name--striked {
-      color: #4d5066; }
-    .todo.todo--dark .todo-container .todo-list .todo-list__row .todo-action-row .todo-left-count, .todo.todo--dark .todo-container .todo-list .todo-list__row .todo-action-row .todo-clear-completed {
-      color: #4d5066; }
-    .todo.todo--dark .todo-container .todo-list .todo-list__row .todo-action-row button {
-      color: #4d5066; }
-      .todo.todo--dark .todo-container .todo-list .todo-list__row .todo-action-row button.active {
-        color: #3a7bfd; }
+      .todo.todo--dark .todo-container .todo-list .todo-list__row:not(:last-child) {
+        border-bottom: 1.5px solid #393a4c; }
+      .todo.todo--dark .todo-container .todo-list .todo-list__row:last-child {
+        box-shadow: none; }
+      .todo.todo--dark .todo-container .todo-list .todo-list__row .todo-list__item__name {
+        color: #cacde8; }
+      .todo.todo--dark .todo-container .todo-list .todo-list__row .todo-list__item__name--striked {
+        color: #4d5066; }
+      .todo.todo--dark .todo-container .todo-list .todo-list__row .todo-action-row .todo-left-count, .todo.todo--dark .todo-container .todo-list .todo-list__row .todo-action-row .todo-clear-completed {
+        color: #4d5066; }
+      .todo.todo--dark .todo-container .todo-list .todo-list__row .todo-action-row button {
+        color: #4d5066; }
+        .todo.todo--dark .todo-container .todo-list .todo-list__row .todo-action-row button.active {
+          color: #3a7bfd; }
   .todo.todo--dark .todo-container .todo-footer {
     background-color: #25273c;
-    border-top: 1.5px solid #393a4c; }
+    border-top: 1.5px solid #393a4c;
+    box-shadow: 0 2px 10px #161722; }
   .todo.todo--dark .todo-container .custom-checkbox .checkmark {
     border: 1.5px solid #393a4c; }
 
@@ -47,7 +50,6 @@ html {
   width: 100vw;
   height: 100vh;
   background-image: url("../assets/images/bg-desktop-light.jpg");
-  background-size: contain;
   background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
@@ -60,13 +62,13 @@ html {
     height: 80vh;
     display: flex;
     flex-direction: column;
-    overflow: hidden; }
+    margin-bottom: 20px; }
     .todo .todo-container .todo-header {
       display: flex;
       justify-content: space-between;
       padding-bottom: 50px; }
       .todo .todo-container .todo-header .todo-header__text {
-        font-size: 36px;
+        font-size: 48px;
         text-transform: uppercase;
         font-weight: 900;
         color: #fafafa;
@@ -79,7 +81,7 @@ html {
         border: none;
         cursor: pointer; }
         .todo .todo-container .todo-header .theme-switch-button > i {
-          font-size: 36px;
+          font-size: 48px;
           color: #fafafa; }
     .todo .todo-container .todo__input {
       display: flex;
@@ -87,7 +89,7 @@ html {
       height: 65px;
       border-radius: 5px;
       background-color: #fafafa;
-      margin-bottom: 25px;
+      margin-bottom: 24px;
       padding: 16px 24px; }
       .todo .todo-container .todo__input .todo-checkbox {
         width: 50px; }
@@ -104,13 +106,14 @@ html {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: 14px;
+  font-size: 16px;
   font-family: inherit;
   padding: 18px 24px;
   border-top: 1.5px solid #e4e5f1;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
-  background-color: #fff; }
+  background-color: #fff;
+  box-shadow: 0 2px 10px #e4e5f1; }
   .todo-footer .todo-left-count, .todo-footer .todo-clear-completed {
     color: #9394a5; }
   .todo-footer .todo-toggle {
@@ -119,7 +122,7 @@ html {
       margin-right: 8px; }
   .todo-footer button {
     color: #9394a5;
-    font-size: 14px;
+    font-size: 16px;
     font-family: inherit;
     padding: 4px;
     background-color: transparent;
@@ -136,11 +139,11 @@ html {
 .custom-checkbox {
   display: block;
   position: relative;
-  height: 25px;
-  padding-left: 35px;
+  height: 30px;
+  padding-left: 36px;
   margin-right: 12px;
   cursor: pointer;
-  font-size: 22px;
+  font-size: 2px;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -159,8 +162,8 @@ html {
   position: absolute;
   top: 0;
   left: 0;
-  height: 25px;
-  width: 25px;
+  height: 30px;
+  width: 30px;
   border: 1.5px solid #e4e5f1;
   border-radius: 50%; }
 
@@ -180,12 +183,12 @@ html {
 
 /* Style the checkmark/indicator */
 .custom-checkbox .checkmark:after {
-  left: 9px;
-  top: 5px;
+  left: 11px;
+  top: 6px;
   width: 5px;
-  height: 10px;
+  height: 12px;
   border: solid #fafafa;
-  border-width: 0 2px 2px 0;
+  border-width: 0 3px 3px 0;
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg); }
@@ -195,7 +198,8 @@ html {
   overflow-y: auto;
   border-radius: 10px;
   border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0; }
+  border-bottom-right-radius: 0;
+  box-shadow: 0 2px 10px #e4e5f1; }
   .todo-list::-webkit-scrollbar {
     display: none; }
   .todo-list .todo-list__item {
