--- a/src/scss/components/_todo.scss
+++ b/src/scss/components/_todo.scss
@@ -3,7 +3,6 @@
   width: 100vw;
   height: 100vh;
   background-image: url("../assets/images/bg-desktop-light.jpg");
-  background-size: contain;
   background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
@@ -17,7 +16,7 @@
     height: 80vh;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
+    margin-bottom: $ds-space-20;
 
     .todo-header {
       display: flex;
@@ -25,11 +24,11 @@
       padding-bottom: 50px;
 
       & .todo-header__text {
-        font-size: $font-size-36;
+        font-size: $font-size-48;
         text-transform: uppercase;
         font-weight: 900;
         color: $color-light-gray-1;
-        letter-spacing: 10px;
+        letter-spacing: $ds-space-10;
       }
 
       & .theme-switch-button {
@@ -41,7 +40,7 @@
         cursor: pointer;
 
         & > i {
-          font-size: $font-size-36;
+          font-size: $font-size-48;
           color: $color-light-gray-1;
         }
       }
@@ -51,10 +50,10 @@
       display: flex;
       align-items: center;
       height: 65px;
-      border-radius: 5px;
+      border-radius: $ds-space-5;
       background-color: $color-light-gray-1;
-      margin-bottom: 25px;
-      padding: 16px 24px;
+      margin-bottom: $ds-space-24;
+      padding: $ds-space-16 $ds-space-24;
 
       .todo-checkbox {
         width: 50px;
