--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,13 +1,15 @@
 @import "base/base";
 @import "base/colors";
-@import "base/variables";
 
 @import "typography/fonts";
 
+@import "settings/spacing";
+@import "settings/typography";
+
 @import "themes/dark-theme";
+
 @import "components/todo";
 @import "components/todo-footer";
 @import "components/todo-checkbox";
 @import "components/todo-list";
 @import "components/todo-list-row";
-
