--- a/src/scss/components/_todo.scss
+++ b/src/scss/components/_todo.scss
@@ -2,14 +2,13 @@
   font-family: 'Josefin Sans';
   width: 100vw;
   height: 100vh;
-  background-image: url("../assets/images/bg-desktop-light.jpg");
-  background-repeat: no-repeat;
+  background: $color-light-bg url("../assets/images/bg-desktop-light.jpg") no-repeat;
+  background-size: contain;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   font-size: $font-size-18;
-  background-color: $color-light-bg;
 
   .todo-container {
     width: 40vw;
