--- a/src/scss/base/colors.scss
+++ b/src/scss/base/colors.scss
@@ -1,6 +1,8 @@
 $color-bright-blue: hsl(220, 98%, 61%);
 $color-checkbox: linear-gradient(to right bottom, hsl(192, 100%, 67%), hsl(280, 87%, 65%));
 
+// white shades
+$color-white-100: #fafafa;
 
 // Light Theme
 $color-light-bg: hsl(0, 0%, 98%);
