--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -8,6 +8,8 @@
 
 @import "themes/dark-theme";
 
+@import "components/dashboard";
+@import "components/sidebar";
 @import "components/todo";
 @import "components/todo-footer";
 @import "components/todo-checkbox";
