--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -9,6 +9,7 @@
 @import "themes/dark-theme";
 
 @import "components/dashboard";
+@import "components/projects";
 @import "components/sidebar";
 @import "components/todo";
 @import "components/todo-footer";
