--- a/src/css/style.css
+++ b/src/css/style.css
@@ -50,7 +50,39 @@ html {
   height: 100vh;
   display: flex; }
   .dashboard .dashboard-content {
-    flex: 1; }
+    flex: 1;
+    padding: 20px; }
+
+.projects {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 50px; }
+  .projects .project-card {
+    text-decoration: none; }
+  .projects .project {
+    border: 1px solid #e4e5f1;
+    border-radius: 10px;
+    overflow: hidden;
+    width: 200px;
+    background-color: #fafafa;
+    box-shadow: 0 1px 10px #d2d3db; }
+    .projects .project:hover {
+      background-color: #3a7bfd; }
+      .projects .project:hover .project__title {
+        color: #fafafa; }
+    .projects .project .project__img {
+      width: 100%;
+      height: auto; }
+    .projects .project .project__title {
+      padding: 10px;
+      color: #3a7bfd;
+      text-transform: uppercase;
+      text-align: center; }
+
+.page-header {
+  font-size: 22px;
+  font-weight: 100;
+  margin-bottom: 20px; }
 
 .sidebar {
   display: flex;
@@ -79,18 +111,16 @@ html {
     flex: 1;
     cursor: pointer; }
     .sidebar .sidebar__menu .sidebar__menu__item {
-      display: block;
-      padding: 10px 16px;
+      display: flex;
+      align-items: flex-end;
+      gap: 10px;
+      padding: 10px 18px;
       border-radius: 4px;
-      font-size: 16px;
+      font-size: 18px;
       text-decoration: none;
       color: inherit; }
       .sidebar .sidebar__menu .sidebar__menu__item.active, .sidebar .sidebar__menu .sidebar__menu__item:hover {
-        color: #fafafa; }
-      .sidebar .sidebar__menu .sidebar__menu__item.active, .sidebar .sidebar__menu .sidebar__menu__item.active:hover {
-        background-color: #3a7bfd; }
-      .sidebar .sidebar__menu .sidebar__menu__item:hover {
-        background-color: rgba(58, 123, 253, 0.8); }
+        color: #3a7bfd; }
 
 .todo {
   font-family: 'Josefin Sans';
