--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,7 +8,8 @@
 
 html {
   font-size: 62.5%;
-  font-family: 'Josefin Sans'; }
+  font-family: 'Josefin Sans';
+  color: #25273c; }
 
 .todo.todo--dark {
   background-image: url("../assets/images/bg-desktop-dark.jpg");
@@ -83,6 +84,8 @@ html {
   font-size: 22px;
   font-weight: 100;
   margin-bottom: 20px; }
+  .page-header.projects {
+    color: #a088ed; }
 
 .sidebar {
   display: flex;
@@ -95,32 +98,78 @@ html {
   padding: 10px; }
   .sidebar .sidebar__header {
     display: flex;
-    gap: 10px;
+    gap: 16px;
     align-items: center;
-    padding: 10px 0;
-    border-bottom: 1px solid #9394a5; }
+    padding-bottom: 10px;
+    border-bottom: 1px solid #9394a5;
+    color: #393a4c; }
     .sidebar .sidebar__header .sidebar__header__image {
-      height: 40px;
-      width: 40px;
-      border-radius: 50%; }
+      height: 50px;
+      width: 50px;
+      border-radius: 50%;
+      border-left-color: transparent;
+      padding: 2px; }
+    .sidebar .sidebar__header .sidebar__header__text {
+      display: flex;
+      flex-direction: column;
+      gap: 5px; }
     .sidebar .sidebar__header .sidebar__header__title {
-      flex: 1;
-      font-size: 30px;
+      font-size: 24px;
       font-weight: 100; }
+    .sidebar .sidebar__header .sidebar__header__subtitle {
+      flex: 1;
+      font-weight: 100;
+      font-size: 12px; }
   .sidebar .sidebar__menu {
-    flex: 1;
-    cursor: pointer; }
+    flex: 1; }
     .sidebar .sidebar__menu .sidebar__menu__item {
       display: flex;
-      align-items: flex-end;
+      align-items: center;
       gap: 10px;
       padding: 10px 18px;
       border-radius: 4px;
       font-size: 18px;
       text-decoration: none;
-      color: inherit; }
-      .sidebar .sidebar__menu .sidebar__menu__item.active, .sidebar .sidebar__menu .sidebar__menu__item:hover {
-        color: #3a7bfd; }
+      color: #4d5066;
+      cursor: pointer;
+      overflow: hidden; }
+      .sidebar .sidebar__menu .sidebar__menu__item:hover > span:first-of-type {
+        background-color: transparent; }
+      .sidebar .sidebar__menu .sidebar__menu__item.active > span:first-of-type::before {
+        background-color: transparent; }
+      .sidebar .sidebar__menu .sidebar__menu__item .material-symbols-rounded {
+        padding: 4px;
+        border-radius: 50%;
+        position: relative; }
+        .sidebar .sidebar__menu .sidebar__menu__item .material-symbols-rounded::before {
+          content: '';
+          display: inline-block;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          height: 35px;
+          width: 35px;
+          border-radius: 50%; }
+        .sidebar .sidebar__menu .sidebar__menu__item .material-symbols-rounded.home {
+          color: #ff903a; }
+        .sidebar .sidebar__menu .sidebar__menu__item .material-symbols-rounded.widgets {
+          color: #a088ed; }
+        .sidebar .sidebar__menu .sidebar__menu__item .material-symbols-rounded.tips_and_updates {
+          color: #6acaf5; }
+        .sidebar .sidebar__menu .sidebar__menu__item .material-symbols-rounded.workspace_premium {
+          color: #52d4b9; }
+      .sidebar .sidebar__menu .sidebar__menu__item:hover .material-symbols-rounded::before {
+        transform: scale(20);
+        transition: transform .3s ease-in; }
+      .sidebar .sidebar__menu .sidebar__menu__item.home.active, .sidebar .sidebar__menu .sidebar__menu__item .material-symbols-rounded.home::before {
+        background-color: rgba(255, 144, 58, 0.2); }
+      .sidebar .sidebar__menu .sidebar__menu__item.widgets.active, .sidebar .sidebar__menu .sidebar__menu__item .material-symbols-rounded.widgets::before {
+        background-color: rgba(160, 136, 237, 0.2); }
+      .sidebar .sidebar__menu .sidebar__menu__item.tips_and_updates.active, .sidebar .sidebar__menu .sidebar__menu__item .material-symbols-rounded.tips_and_updates::before {
+        background-color: rgba(106, 202, 245, 0.2); }
+      .sidebar .sidebar__menu .sidebar__menu__item.workspace_premium.active, .sidebar .sidebar__menu .sidebar__menu__item .material-symbols-rounded.workspace_premium::before {
+        background-color: rgba(82, 212, 185, 0.2); }
 
 .todo {
   font-family: 'Josefin Sans';
