--- a/src/scss/settings/typography.scss
+++ b/src/scss/settings/typography.scss
@@ -1,5 +1,7 @@
+$font-size-12: 12px;
 $font-size-16: 16px;
 $font-size-18: 18px;
 $font-size-22: 22px;
+$font-size-24: 24px;
 $font-size-30: 30px;
 $font-size-48: 48px;
