--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700;900&display=swap");
 *,
 *::after,
 *::before {
@@ -8,7 +9,7 @@
 
 html {
   font-size: 62.5%;
-  font-family: 'Josefin Sans';
+  font-family: 'Montserrat', sans-serif;
   color: #25273c; }
 
 .todo.todo--dark {
@@ -46,6 +47,33 @@ html {
   .todo.todo--dark .todo-container .custom-checkbox .checkmark {
     border: 1.5px solid #393a4c; }
 
+.badge {
+  display: inline;
+  padding: 5px;
+  border-radius: 5px;
+  color: white; }
+
+.badge--html {
+  background-color: #F06529; }
+
+.badge--scss {
+  background-color: #CD6799; }
+
+.badge--react {
+  background-color: #61DBFB; }
+
+.badge--ts {
+  background-color: #007acc; }
+
+.badge--webpack {
+  background: linear-gradient(to right, #8ED5FA 50%, #1C78C0 50%); }
+
+.badge--jest {
+  background-color: #C63D14; }
+
+.badge--rtl {
+  background-color: #e23233; }
+
 .dashboard {
   width: 100vw;
   height: 100vh;
@@ -58,19 +86,59 @@ html {
   display: flex;
   flex-wrap: wrap;
   gap: 50px; }
+  .projects .project-link {
+    display: block;
+    color: #fafafa;
+    text-decoration: none;
+    padding: 8px;
+    border-radius: 12px;
+    font-size: 12px;
+    width: 75%;
+    background-color: #00b300; }
   .projects .project-card {
-    text-decoration: none; }
-  .projects .project {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d; }
+  .projects .project:hover .project-card {
+    transform: rotateY(180deg); }
+  .projects .project-card__front, .projects .project-card__back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
     border: 1px solid #e4e5f1;
     border-radius: 10px;
     overflow: hidden;
-    width: 200px;
-    background-color: #fafafa;
     box-shadow: 0 1px 10px #d2d3db; }
-    .projects .project:hover {
-      background-color: #3a7bfd; }
-      .projects .project:hover .project__title {
-        color: #fafafa; }
+  .projects .project-card__back {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    gap: 4px 8px;
+    padding: 8px;
+    transform: rotateY(180deg); }
+  .projects .tech-stack .tech-stack__heading {
+    color: #393a4c;
+    font-size: 14px;
+    font-weight: 300;
+    font-variant: small-caps;
+    padding-bottom: 4px; }
+  .projects .tech-stack .tech-stack__items {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 4px 8px;
+    flex-wrap: wrap; }
+  .projects .project {
+    background-color: transparent;
+    perspective: 1000px;
+    width: 200px;
+    height: 150px; }
     .projects .project .project__img {
       width: 100%;
       height: auto; }
@@ -82,7 +150,7 @@ html {
 
 .page-header {
   font-size: 22px;
-  font-weight: 100;
+  font-weight: 700;
   margin-bottom: 20px; }
   .page-header.projects {
     color: #a088ed; }
@@ -115,32 +183,46 @@ html {
       gap: 5px; }
     .sidebar .sidebar__header .sidebar__header__title {
       font-size: 24px;
-      font-weight: 100; }
+      font-weight: 500; }
     .sidebar .sidebar__header .sidebar__header__subtitle {
       flex: 1;
-      font-weight: 100;
+      font-weight: 300;
       font-size: 12px; }
   .sidebar .sidebar__menu {
-    flex: 1; }
+    flex: 1;
+    font-size: 14px; }
     .sidebar .sidebar__menu .sidebar__menu__item {
       display: flex;
       align-items: center;
       gap: 10px;
-      padding: 10px 18px;
+      padding: 8px 16px;
       border-radius: 4px;
-      font-size: 18px;
-      text-decoration: none;
       color: #4d5066;
+      text-decoration: none;
+      font-weight: 300;
       cursor: pointer;
       overflow: hidden; }
-      .sidebar .sidebar__menu .sidebar__menu__item:hover > span:first-of-type {
+      .sidebar .sidebar__menu .sidebar__menu__item.active.home, .sidebar .sidebar__menu .sidebar__menu__item .home {
+        color: #ff903a; }
+      .sidebar .sidebar__menu .sidebar__menu__item.active.widgets, .sidebar .sidebar__menu .sidebar__menu__item .widgets {
+        color: #a088ed; }
+      .sidebar .sidebar__menu .sidebar__menu__item.active.tips_and_updates, .sidebar .sidebar__menu .sidebar__menu__item .tips_and_updates {
+        color: #6acaf5; }
+      .sidebar .sidebar__menu .sidebar__menu__item.active.workspace_premium, .sidebar .sidebar__menu .sidebar__menu__item .workspace_premium {
+        color: #52d4b9; }
+      .sidebar .sidebar__menu .sidebar__menu__item.active {
+        font-weight: 500; }
+      .sidebar .sidebar__menu .sidebar__menu__item.active > .material-symbols-rounded {
+        font-weight: 900; }
+      .sidebar .sidebar__menu .sidebar__menu__item:hover > .material-symbols-rounded {
         background-color: transparent; }
-      .sidebar .sidebar__menu .sidebar__menu__item.active > span:first-of-type::before {
+      .sidebar .sidebar__menu .sidebar__menu__item.active > .material-symbols-rounded::before {
         background-color: transparent; }
       .sidebar .sidebar__menu .sidebar__menu__item .material-symbols-rounded {
         padding: 4px;
         border-radius: 50%;
-        position: relative; }
+        position: relative;
+        font-size: 18px; }
         .sidebar .sidebar__menu .sidebar__menu__item .material-symbols-rounded::before {
           content: '';
           display: inline-block;
@@ -148,20 +230,14 @@ html {
           top: 50%;
           left: 50%;
           transform: translate(-50%, -50%);
-          height: 35px;
-          width: 35px;
+          height: 28px;
+          width: 28px;
           border-radius: 50%; }
-        .sidebar .sidebar__menu .sidebar__menu__item .material-symbols-rounded.home {
-          color: #ff903a; }
-        .sidebar .sidebar__menu .sidebar__menu__item .material-symbols-rounded.widgets {
-          color: #a088ed; }
-        .sidebar .sidebar__menu .sidebar__menu__item .material-symbols-rounded.tips_and_updates {
-          color: #6acaf5; }
-        .sidebar .sidebar__menu .sidebar__menu__item .material-symbols-rounded.workspace_premium {
-          color: #52d4b9; }
       .sidebar .sidebar__menu .sidebar__menu__item:hover .material-symbols-rounded::before {
         transform: scale(20);
         transition: transform .3s ease-in; }
+      .sidebar .sidebar__menu .sidebar__menu__item.active .material-symbols-rounded::before {
+        display: none; }
       .sidebar .sidebar__menu .sidebar__menu__item.home.active, .sidebar .sidebar__menu .sidebar__menu__item .material-symbols-rounded.home::before {
         background-color: rgba(255, 144, 58, 0.2); }
       .sidebar .sidebar__menu .sidebar__menu__item.widgets.active, .sidebar .sidebar__menu .sidebar__menu__item .material-symbols-rounded.widgets::before {
@@ -170,6 +246,33 @@ html {
         background-color: rgba(106, 202, 245, 0.2); }
       .sidebar .sidebar__menu .sidebar__menu__item.workspace_premium.active, .sidebar .sidebar__menu .sidebar__menu__item .material-symbols-rounded.workspace_premium::before {
         background-color: rgba(82, 212, 185, 0.2); }
+
+.skills-table {
+  display: inline-block;
+  width: 225px;
+  border: 1px solid #d2d3db;
+  border-radius: 6px;
+  overflow: hidden;
+  box-shadow: 0 1px 10px #e4e5f1;
+  font-weight: 300; }
+  .skills-table .skills-table__heading, .skills-table .skills-table__item {
+    padding: 8px 12px; }
+  .skills-table .skills-table__heading {
+    border-bottom: 1px solid #d2d3db; }
+  .skills-table .skills-table__heading {
+    font-weight: 500;
+    font-size: 12px;
+    background-color: #3a7bfd;
+    color: #fafafa; }
+  .skills-table .skills-table__item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    font-weight: 400; }
+    .skills-table .skills-table__item .material-symbols-rounded {
+      font-size: 18px;
+      color: #ffb733; }
 
 .todo {
   font-family: 'Josefin Sans';
