--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -8,6 +8,6 @@
 
 html {
   font-size: 62.5%;
-  font-family: 'Josefin Sans';
+  font-family: 'Montserrat', sans-serif;
   color: $color-dark-gray-2;
 }
