--- a/src/scss/components/projects.scss
+++ b/src/scss/components/projects.scss
@@ -3,25 +3,80 @@
   flex-wrap: wrap;
   gap: 50px;
 
-  .project-card {
+  .project-link {
+    display: block;
+    color: $color-white-100;
     text-decoration: none;
+    padding: 8px;
+    border-radius: 12px;
+    font-size: 12px;
+    width: 75%;
+    background-color: lighten(green, 10%);
   }
 
-  .project {
+  .project-card {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+  }
+
+  .project:hover .project-card {
+    transform: rotateY(180deg);
+  }
+
+  .project-card__front , .project-card__back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
     border: 1px solid $color-light-gray-2;
     border-radius: $ds-space-10;
     overflow: hidden;
-    width: 200px;
-    background-color: $color-light-gray-1;
     box-shadow: 0 1px 10px $color-light-gray-3;
+  }
 
-    &:hover {
-      background-color: $color-bright-blue;
+  .project-card__front {
 
-      .project__title {
-        color: $color-white-100;
-      }
+  }
+
+  .project-card__back {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    gap: $ds-space-4 $ds-space-8;
+    padding: $ds-space-8;
+    transform: rotateY(180deg);
+  }
+
+  .tech-stack {
+    .tech-stack__heading {
+      color: $color-dark-gray-3;
+      font-size: 14px;
+      font-weight: 300;
+      font-variant: small-caps;
+      padding-bottom: $ds-space-4;
     }
+
+    .tech-stack__items {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: $ds-space-4 $ds-space-8;
+      flex-wrap: wrap;
+    }
+  }
+
+
+  .project {
+    background-color: transparent;
+    perspective: 1000px;
+    width: 200px;
+    height: 150px;
 
     .project__img {
       width: 100%;
@@ -39,7 +94,7 @@
 
 .page-header {
   font-size: $font-size-22;
-  font-weight: 100;
+  font-weight: 700;
   margin-bottom: $ds-space-20;
 
   &.projects {
